infrastructure/flux/cilium/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: "192.168.1.210"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: test-https
    protocol: HTTPS
    port: 443
    hostname: test.codesugar.mx
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: test-codesugar-mx-tls
    allowedRoutes:
      namespaces:
        from: All
