infrastructure/flux/cilium/hubble-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: hubble-ui
    sectionName: https
  hostnames:
  - hubble.codesugar.mx
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
