infrastructure/flux/cilium/lan-only-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: gateway-host-access
spec:
  endpointSelector:
    matchLabels:
      reserved:ingress: ""
  ingress:
  # Trusted sources: all hosts DEFAULT
  - fromCIDR:
    - 192.168.0.0/16
    - 201.119.42.162/32
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
  # Everyone else: ACME HTTP-01 challenge path only, on any host (so private
  # hosts can still get certificates from Let's Encrypt)
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: "/\\.well-known/acme-challenge/.+"
  # Everyone else: PUBLIC HOSTS only
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      rules:
        http:
        - host: "whoami\\.codesugar\\.mx"
        - host: "webhook-flux\\.codesugar\\.mx"
        - host: "jellyfin\\.codesugar\\.mx"
        - host: "openwebui\\.codesugar\\.mx"
        - host: "webtop\\.codesugar\\.mx"
        - host: "webtop-2\\.codesugar\\.mx"
        - host: "auth\\.codesugar\\.mx"
